@@ -1,5 +1,4 @@
-Build
-Makefile.PL
+Build*
 Makefile
 _build/
 blib/
